// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(2)",
    "handle": "carol.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "avatar": "https://pds.public.url/image/nFNFXt5_l4kN8k1Ar8Gb8tfEj8Z0woTMDD3UoX5nNqo/rs:fill:500:500:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(3)",
    "displayName": "bobby",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;
